force-app/main/default/objects/Project_Phase__c/Project_Phase__c.object-meta.xml
<CustomObject>
    <label>Project Phase</label>
    <nameField>
        <displayFormat>PP-{00000}</displayFormat>
        <label>Project Phase Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Phases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>