force-app/main/default/objects/Project_Phase__c/fields/Billable__c.field-meta.xml
<CustomField>
    <fullName>Billable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Milestone</label>
    <type>Checkbox</type>
</CustomField>