force-app/main/default/objects/Project_Phase__c/fields/CR_2_Hours__c.field-meta.xml
<CustomField>
    <fullName>CR_2_Hours__c</fullName>
    <label>CR 2 Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>