force-app/main/default/objects/Project_Phase__c/fields/Is_Phase__c.field-meta.xml
<CustomField>
    <fullName>Is_Phase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Phase</label>
    <type>Checkbox</type>
</CustomField>