force-app/main/default/objects/Project_Phase__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Project Phases</relationshipLabel>
    <relationshipName>Project_Phases</relationshipName>
    <type>Lookup</type>
</CustomField>