force-app/main/default/objects/Project_Phase__c/fields/Parent_Phase__c.field-meta.xml
<CustomField>
    <fullName>Parent_Phase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Phase</label>
    <referenceTo>Project_Phase__c</referenceTo>
    <relationshipLabel>Project Phases</relationshipLabel>
    <relationshipName>Project_Phases</relationshipName>
    <type>Lookup</type>
</CustomField>