force-app/main/default/objects/Project_Phase__c/fields/Phase_Number__c.field-meta.xml
<CustomField>
    <fullName>Phase_Number__c</fullName>
    <label>Phase Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>